--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,22 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <service android:name=".lifecycle.service.MyService"/>
+        <service android:name=".lifecycle.service.MyService" />
 
-        <activity android:name=".navigation.NavigationActivity" />
+        <activity android:name=".navigation.NavigationActivity" >
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+
+            <nav-graph android:value="@navigation/nav_graph"/>
+        </activity>
         <activity android:name=".lifecycle.LifecycleMainActivity" />
         <activity android:name=".lifecycle.service.LifecycleServiceActivity" />
         <activity android:name=".lifecycle.activity.LifeCycleActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
