ViewModel基本使用方法

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
 
         <service android:name=".lifecycle.service.MyService" />
 
+
+        <activity android:name=".viewmodel.ViewModelTestActivity" />
         <activity android:name=".navigation.NavigationActivity" >
 
             <intent-filter>
