--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <service android:name=".lifecycle.service.MyService" />
 
 
+        <activity android:name=".livedata.LiveDataTestActivity" />
         <activity android:name=".viewmodel.ViewModelTestActivity" />
         <activity android:name=".navigation.NavigationActivity" >
 
