--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,17 @@
 
         <service android:name=".lifecycle.service.MyService" />
 
+        <activity android:name="com.jinxin.jetpacktest.room.RoomTestActivity" />
         <activity android:name=".livedata.LiveDataFragmentActivity" />
         <activity android:name=".livedata.LiveDataTestActivity" />
         <activity android:name=".viewmodel.ViewModelTestActivity" />
-        <activity android:name=".navigation.NavigationActivity" >
+        <activity android:name=".navigation.NavigationActivity">
 
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
 
-            <nav-graph android:value="@navigation/nav_graph"/>
+            <nav-graph android:value="@navigation/nav_graph" />
         </activity>
         <activity android:name=".lifecycle.LifecycleMainActivity" />
         <activity android:name=".lifecycle.service.LifecycleServiceActivity" />
