--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
 
         <service android:name=".lifecycle.service.MyService" />
 
+        <activity android:name="com.jinxin.jetpacktest.room.livedata.LiveDataRoomTestActivity" />
         <activity android:name="com.jinxin.jetpacktest.room.RoomTestActivity" />
         <activity android:name=".livedata.LiveDataFragmentActivity" />
         <activity android:name=".livedata.LiveDataTestActivity" />
