--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,7 @@ dependencies {
     implementation "androidx.room:room-runtime:2.2.5"
     annotationProcessor "androidx.room:room-compiler:2.2.5"
 
+    // 添加WorkManager相关依赖
+    implementation "androidx.work:work-runtime:2.4.0"
+
 }
