DataBinding 数据绑定 DataBinding View响应事件 DataBinding 二级页面的绑定

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,11 @@ android {
         }
     }
 
+    // 启用数据绑定
+    dataBinding {
+        enabled = true
+    }
+
     buildTypes {
         release {
             minifyEnabled false
