DataBinding 自定义BindingAdapter的基本用法、自定义BindingAdapter方法重载、多重参数重载、可选旧值

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jinxin.jetpacktest">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".lifecycle.application.MyApplication"
         android:allowBackup="true"
