--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,5 +61,7 @@ dependencies {
 
     // 添加WorkManager相关依赖
     implementation "androidx.work:work-runtime:2.4.0"
+    // 图片加载框架
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 }
