--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
 
         <service android:name=".lifecycle.service.MyService" />
 
+        <activity android:name="com.jinxin.jetpacktest.databinding.RecyclerViewBindingActivity"/>
+        <activity android:name="com.jinxin.jetpacktest.databinding.TowWayBindingActivity"/>
         <activity android:name="com.jinxin.jetpacktest.databinding.DataBindingTestActivity"/>
         <activity android:name="com.jinxin.jetpacktest.workmanager.WorkManagerTestActivity" />
         <activity android:name="com.jinxin.jetpacktest.room.livedata.LiveDataRoomTestActivity" />
