--- a/paging/src/main/AndroidManifest.xml
+++ b/paging/src/main/AndroidManifest.xml
@@ -4,8 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <application
-        android:usesCleartextTraffic="true">
+    <application android:usesCleartextTraffic="true">
+        <activity android:name=".pagekeyeddatasource.PageKeyedActivity"></activity>
         <activity android:name=".positionaldatasource.PagingMainActivity" />
     </application>
 
