--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
     implementation project(':paging')
+    implementation project(':mvvm')
 
     // 基础组件依赖
     implementation 'androidx.appcompat:appcompat:1.2.0'
