--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.jinxin.jetpacktest">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".lifecycle.application.MyApplication"
+        android:name="com.jinxin.lifecycle.application.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,8 +14,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-
-        <service android:name=".lifecycle.service.MyService" />
 
         <activity android:name="com.jinxin.jetpacktest.databinding.RecyclerViewBindingActivity"/>
         <activity android:name="com.jinxin.jetpacktest.databinding.TowWayBindingActivity"/>
@@ -33,9 +32,6 @@
 
             <nav-graph android:value="@navigation/nav_graph" />
         </activity>
-        <activity android:name=".lifecycle.LifecycleMainActivity" />
-        <activity android:name=".lifecycle.service.LifecycleServiceActivity" />
-        <activity android:name=".lifecycle.activity.LifeCycleActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
