--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation project(':navigation')
     implementation project(':paging')
     implementation project(':mvvm')
+    implementation project(':viewmodel')
 
     // 基础组件依赖
     implementation 'androidx.appcompat:appcompat:1.2.0'
