--- a/livedata/build.gradle
+++ b/livedata/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 
     // 添加ViewModel依赖
     implementation 'androidx.lifecycle:lifecycle-viewmodel:2.2.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
