--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation project(':paging')
     implementation project(':mvvm')
     implementation project(':viewmodel')
+    implementation project(':livedata')
 
     // 基础组件依赖
     implementation 'androidx.appcompat:appcompat:1.2.0'
